[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scripts/world.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/levels/level_03.gd" type="Script" id=2]
[ext_resource path="res://assets/objects/ui/player_hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/objects/ui/ingame_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/objects/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/objects/boss.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/tilesets/walls.tres" type="TileSet" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.1486, 18.1283 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.2841, 12.6423 )

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 14, 112, 14, 14, 112, 14, 42, 112, 112, 112, 84, 112, 84, 420, 42, 420, 336, 420, 336, 868, -210, 868, -210, 420 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 4, 5 ), PoolIntArray( 3, 2, 5 ), PoolIntArray( 3, 5, 6, 7 ), PoolIntArray( 6, 8, 9, 10 ), PoolIntArray( 7, 6, 10 ), PoolIntArray( 7, 10, 11 ) ]
outlines = [ PoolVector2Array( 14, 14, 112, 14, 112, 112, 84, 112, 84, 420, 336, 420, 336, 868, -210, 868, -210, 420, 42, 420, 42, 112, 14, 112 ) ]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Events" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 2 )
world_path = NodePath("..")
player_path = NodePath("../Player")
boss_path = NodePath("../Boss")
ingame_menu_path = NodePath("../CanvasLayer/IngameMenu")

[node name="DialogHallway" type="Area2D" parent="Events"]
position = Vector2( 63.2844, 250.392 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Events/DialogHallway"]
shape = SubResource( 1 )

[node name="DialogCutscene" type="Area2D" parent="Events"]
position = Vector2( 63.4141, 409.153 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Events/DialogCutscene"]
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="PlayerHUD" parent="CanvasLayer" instance=ExtResource( 3 )]
pause_mode = 2
light_mask = 2

[node name="IngameMenu" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
visible = false
navpoly = SubResource( 2 )

[node name="WallMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 14, 14 )
cell_quadrant_size = 4
cell_custom_transform = Transform2D( 14, 0, 0, 14, 0, 0 )
format = 1
tile_data = PoolIntArray( 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 2, 0, 524288, 3, 0, 524296, 4, 0, 589824, 3, 0, 589832, 4, 0, 655360, 3, 0, 655368, 4, 0, 720896, 3, 0, 720904, 4, 0, 786432, 3, 0, 786440, 4, 0, 851968, 5, 0, 851969, 6, 0, 851970, 13, 0, 851974, 12, 0, 851975, 6, 0, 851976, 7, 0, 917506, 3, 0, 917510, 4, 0, 983042, 3, 0, 983046, 4, 0, 1048578, 3, 0, 1048582, 4, 0, 1114114, 3, 0, 1114118, 4, 0, 1179650, 3, 0, 1179654, 4, 0, 1245186, 3, 0, 1245190, 4, 0, 1310722, 3, 0, 1310726, 4, 0, 1376258, 3, 0, 1376262, 4, 0, 1441794, 3, 0, 1441798, 4, 0, 1507330, 3, 0, 1507334, 4, 0, 1572866, 3, 0, 1572870, 4, 0, 1638402, 3, 0, 1638406, 4, 0, 1703938, 3, 0, 1703942, 4, 0, 1769474, 3, 0, 1769478, 4, 0, 1835010, 3, 0, 1835014, 4, 0, 1966069, 0, 0, 1966070, 1, 0, 1966071, 1, 0, 1966072, 1, 0, 1966073, 1, 0, 1966074, 1, 0, 1966075, 1, 0, 1966076, 1, 0, 1966077, 1, 0, 1966078, 1, 0, 1966079, 1, 0, 1900544, 1, 0, 1900545, 1, 0, 1900546, 11, 0, 1900550, 10, 0, 1900551, 1, 0, 1900552, 1, 0, 1900553, 1, 0, 1900554, 1, 0, 1900555, 1, 0, 1900556, 1, 0, 1900557, 1, 0, 1900558, 1, 0, 1900559, 1, 0, 1900560, 1, 0, 1900561, 1, 0, 1900562, 1, 0, 1900563, 2, 0, 2031605, 3, 0, 1966099, 4, 0, 2097141, 3, 0, 2031635, 4, 0, 2162677, 3, 0, 2097171, 4, 0, 2228213, 3, 0, 2162707, 4, 0, 2293749, 3, 0, 2228243, 4, 0, 2359285, 3, 0, 2293779, 4, 0, 2424821, 3, 0, 2359315, 4, 0, 2490357, 3, 0, 2424851, 4, 0, 2555893, 3, 0, 2490387, 4, 0, 2621429, 3, 0, 2555923, 4, 0, 2686965, 3, 0, 2621459, 4, 0, 2752501, 3, 0, 2686995, 4, 0, 2818037, 3, 0, 2752531, 4, 0, 2883573, 3, 0, 2818067, 4, 0, 2949109, 3, 0, 2883603, 4, 0, 3014645, 3, 0, 2949139, 4, 0, 3080181, 3, 0, 3014675, 4, 0, 3145717, 3, 0, 3080211, 4, 0, 3211253, 3, 0, 3145747, 4, 0, 3276789, 3, 0, 3211283, 4, 0, 3342325, 3, 0, 3276819, 4, 0, 3407861, 3, 0, 3342355, 4, 0, 3473397, 3, 0, 3407891, 4, 0, 3538933, 3, 0, 3473427, 4, 0, 3604469, 3, 0, 3538963, 4, 0, 3670005, 3, 0, 3604499, 4, 0, 3735541, 3, 0, 3670035, 4, 0, 3801077, 3, 0, 3735571, 4, 0, 3866613, 3, 0, 3801107, 4, 0, 3932149, 5, 0, 3932150, 6, 0, 3932151, 6, 0, 3932152, 6, 0, 3932153, 6, 0, 3932154, 6, 0, 3932155, 6, 0, 3932156, 6, 0, 3932157, 6, 0, 3932158, 6, 0, 3932159, 6, 0, 3866624, 6, 0, 3866625, 6, 0, 3866626, 6, 0, 3866627, 6, 0, 3866628, 6, 0, 3866629, 6, 0, 3866630, 6, 0, 3866631, 6, 0, 3866632, 6, 0, 3866633, 6, 0, 3866634, 6, 0, 3866635, 6, 0, 3866636, 6, 0, 3866637, 6, 0, 3866638, 6, 0, 3866639, 6, 0, 3866640, 6, 0, 3866641, 6, 0, 3866642, 6, 0, 3866643, 7, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 63.1353, 205.853 )
hud_path = NodePath("../CanvasLayer/PlayerHUD")

[node name="Camera2D" parent="Player" index="2"]
pause_mode = 2

[node name="AreaAggro" parent="Player" index="3"]
can_deaggro = false

[node name="Boss" parent="." instance=ExtResource( 7 )]
position = Vector2( 159.579, 536.764 )
[connection signal="body_entered" from="Events/DialogHallway" to="Events" method="_on_DialogHallway_body_entered"]
[connection signal="body_entered" from="Events/DialogCutscene" to="Events" method="_on_DialogCutscene_body_entered"]

[editable path="Player"]
